@@ -169,6 +169,10 @@ ctags-exuberant|Exuberant Ctags|ctags by Darren Hiebert:\
 #	link header at definition.
 # other_files: boolean
 #	if 1 then print not only source files but also other files.
+# enable_grep: boolean
+#	enable grep search using CGI program.
+# enable_idutils: boolean
+#	enable idutils search using CGI program.
 #
 #---------------------------------------------------------------------
 htags:\
